--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,6 +42,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Crouch",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Sprint",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="InteractionKey",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Horizontal",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="Vertical",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MouseLookHorizontal",Key=MouseX,Scale=1.000000)
