--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,4 +108,9 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/Engine.RecastNavMesh]
+RuntimeGeneration=DynamicModifiersOnly
+
+[/Script/Engine.NavigationSystem]
+bAutoCreateNavigationData=False
 
