--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -44,12 +44,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="InteractionKey",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Crouch",Key=Gamepad_LeftThumbstick,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="InteractionKey",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Sprint&Jump",Key=Gamepad_FaceButton_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Sprint",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="TakeDamage",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="DestroyPlayer",Key=P,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Save&Load",Key=L,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="FlashLight",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Horizontal",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="Vertical",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MouseLookHorizontal",Key=MouseX,Scale=1.000000)
