added AI to level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,6 +68,15 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RecastNavMesh]
 RuntimeGeneration=Dynamic
+DrawOffset=10.000000
+CellSize=10.000000
+AgentRadius=42.515026
+AgentMaxSlope=44.000004
+MinRegionArea=0.514286
+MergeRegionSize=829.918823
+MaxSimplificationError=1.616681
+TileSizeUU=2035.834473
+HeuristicScale=1.266146
 
 [/Script/Engine.NavigationSystem]
 bAutoCreateNavigationData=False
@@ -112,4 +121,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
