--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ContentPackages/StarterContent/Maps/Minimal_Default.Minimal_Default
-GameDefaultMap=/Game/ContentPackages/StarterContent/Maps/Minimal_Default.Minimal_Default
+GameDefaultMap=/Game/Maps/MainMenu_LVL.MainMenu_LVL
 GlobalDefaultGameMode=/Game/Blueprints/FPSGameMode.FPSGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -121,3 +121,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
