--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -121,3 +121,7 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+[/Script/Engine.Engine]
+NearClipPlane=10.000000
+
