Has been moving the page system to the new pagegameinstance

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 EditorStartupMap=/Game/ContentPackages/StarterContent/Maps/Minimal_Default.Minimal_Default
 GameDefaultMap=/Game/Maps/MainMenu_LVL.MainMenu_LVL
 GlobalDefaultGameMode=/Game/Blueprints/FPSGameMode.FPSGameMode_C
+GameInstanceClass=/Game/Blueprints/Checkpoint/PageGameInstance.PageGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -130,3 +131,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
