- Added animations for AI, including attacking, finishing, walking/sprinting/idle and stun.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,27 +68,20 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RecastNavMesh]
 RuntimeGeneration=Dynamic
-DrawOffset=10.000000
-CellSize=10.000000
-AgentRadius=7.442985
+DrawOffset=133.843796
+CellSize=1.000000
+AgentRadius=1129.461548
 AgentMaxSlope=44.000004
-MinRegionArea=0.247619
+MinRegionArea=2.133314
 MergeRegionSize=829.918823
-MaxSimplificationError=1.616681
-TileSizeUU=4470.733887
+MaxSimplificationError=4.123229
+TileSizeUU=10240.000000
 HeuristicScale=1.266146
 CellHeight=10.000000
+AgentHeight=396.652222
 
-[/Script/Engine.NavigationSystem]
-bAutoCreateNavigationData=False
-bAllowClientSideNavigation=False
-bInitialBuildingLocked=False
-bSkipAgentHeightCheckWhenPickingNavData=False
-DataGatheringMode=Instant
-bGenerateNavigationOnlyAroundNavigationInvokers=False
-ActiveTilesUpdateInterval=1.000000
-+SupportedAgents=(Name="Default",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/Engine.RecastNavMesh,AgentRadius=20.000000,AgentHeight=144.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=Class'"/Script/Engine.RecastNavMesh"',bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
-DirtyAreasUpdateFreq=60.000000
+[/Script/Engine.Engine]
+NearClipPlane=10.000000
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -131,6 +124,13 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
-[/Script/Engine.Engine]
-NearClipPlane=10.000000
-
+[/Script/Engine.NavigationSystem]
+bAutoCreateNavigationData=False
+bAllowClientSideNavigation=False
+bInitialBuildingLocked=False
+bSkipAgentHeightCheckWhenPickingNavData=False
+DataGatheringMode=Instant
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+ActiveTilesUpdateInterval=1.000000
++SupportedAgents=(Name="Default",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/Engine.RecastNavMesh,AgentRadius=408.910675,AgentHeight=144.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=Class'"/Script/Engine.RecastNavMesh"',bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
+DirtyAreasUpdateFreq=60.000000
