Menu system working now, will probably work on load system integration into menu system

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -48,6 +48,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Save&Load",Key=L,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="FlashLight",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PauseMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PauseMenu",Key=P,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Horizontal",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="Vertical",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MouseLookHorizontal",Key=MouseX,Scale=1.000000)
