--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ContentPackages/StarterContent/Maps/Minimal_Default.Minimal_Default
+EditorStartupMap=/Game/Maps/MainMenu_LVL.MainMenu_LVL
 GameDefaultMap=/Game/Maps/MainMenu_LVL.MainMenu_LVL
 GlobalDefaultGameMode=/Game/Blueprints/FPSGameMode.FPSGameMode_C
 GameInstanceClass=/Game/Blueprints/Checkpoint/PageGameInstance.PageGameInstance_C
